# Spammer

./: cmd.json  helpcontent.txt  main.py  pyproject.toml
