[tool.poetry]
name = "repl_python3_Test-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
async-repeat = "^0.0.1"
wait = "^0.0.3"
flask = "^2.0.1"
http1 = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
